docs/api/qiskit/0.25/qiskit.providers.basicaer.BasicAerJob.mdx
---
title: BasicAerJob
description: API reference for qiskit.providers.basicaer.BasicAerJob
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.basicaer.BasicAerJob
---

# qiskit.providers.basicaer.BasicAerJob

<Class id="qiskit.providers.basicaer.BasicAerJob" github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/providers/basicaer/basicaerjob.py" signature="BasicAerJob(backend, job_id, result)">
  BasicAerJob class.

  Initializes the asynchronous job.

  **Parameters**

  *   **backend** – the backend used to run the job.
  *   **job\_id** – a unique id in the context of the backend used to run the job.
  *   **kwargs** – Any key value metadata to associate with this job.

  ### \_\_init\_\_

  <Function id="qiskit.providers.basicaer.BasicAerJob.__init__" name="__init__" signature="__init__(backend, job_id, result)">
    Initializes the asynchronous job.

    **Parameters**

    *   **backend** – the backend used to run the job.
    *   **job\_id** – a unique id in the context of the backend used to run the job.
    *   **kwargs** – Any key value metadata to associate with this job.
  </Function>

  ## Methods

  |                                                                                                                                                                                |                                                                                     |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.providers.basicaer.BasicAerJob.__init__ "qiskit.providers.basicaer.BasicAerJob.__init__")(backend, job\_id, result)                                       | Initializes the asynchronous job.                                                   |
  | [`backend`](#qiskit.providers.basicaer.BasicAerJob.backend "qiskit.providers.basicaer.BasicAerJob.backend")()                                                                  | Return the instance of the backend used for this job.                               |
  | [`cancel`](#qiskit.providers.basicaer.BasicAerJob.cancel "qiskit.providers.basicaer.BasicAerJob.cancel")()                                                                     | Attempt to cancel the job.                                                          |
  | [`cancelled`](#qiskit.providers.basicaer.BasicAerJob.cancelled "qiskit.providers.basicaer.BasicAerJob.cancelled")()                                                            | Return whether the job has been cancelled.                                          |
  | [`done`](#qiskit.providers.basicaer.BasicAerJob.done "qiskit.providers.basicaer.BasicAerJob.done")()                                                                           | Return whether the job has successfully run.                                        |
  | [`in_final_state`](#qiskit.providers.basicaer.BasicAerJob.in_final_state "qiskit.providers.basicaer.BasicAerJob.in_final_state")()                                             | Return whether the job is in a final job state such as `DONE` or `ERROR`.           |
  | [`job_id`](#qiskit.providers.basicaer.BasicAerJob.job_id "qiskit.providers.basicaer.BasicAerJob.job_id")()                                                                     | Return a unique id identifying the job.                                             |
  | [`result`](#qiskit.providers.basicaer.BasicAerJob.result "qiskit.providers.basicaer.BasicAerJob.result")(\[timeout])                                                           | Get job result .                                                                    |
  | [`running`](#qiskit.providers.basicaer.BasicAerJob.running "qiskit.providers.basicaer.BasicAerJob.running")()                                                                  | Return whether the job is actively running.                                         |
  | [`status`](#qiskit.providers.basicaer.BasicAerJob.status "qiskit.providers.basicaer.BasicAerJob.status")()                                                                     | Gets the status of the job by querying the Python’s future                          |
  | [`submit`](#qiskit.providers.basicaer.BasicAerJob.submit "qiskit.providers.basicaer.BasicAerJob.submit")()                                                                     | Submit the job to the backend for execution.                                        |
  | [`wait_for_final_state`](#qiskit.providers.basicaer.BasicAerJob.wait_for_final_state "qiskit.providers.basicaer.BasicAerJob.wait_for_final_state")(\[timeout, wait, callback]) | Poll the job status until it progresses to a final state such as `DONE` or `ERROR`. |

  ## Attributes

  |           |   |
  | --------- | - |
  | `version` |   |

  ### backend

  <Function id="qiskit.providers.basicaer.BasicAerJob.backend" name="backend" signature="backend()">
    Return the instance of the backend used for this job.
  </Function>

  ### cancel

  <Function id="qiskit.providers.basicaer.BasicAerJob.cancel" name="cancel" signature="cancel()">
    Attempt to cancel the job.
  </Function>

  ### cancelled

  <Function id="qiskit.providers.basicaer.BasicAerJob.cancelled" name="cancelled" signature="cancelled()">
    Return whether the job has been cancelled.

    **Return type**

    `bool`
  </Function>

  ### done

  <Function id="qiskit.providers.basicaer.BasicAerJob.done" name="done" signature="done()">
    Return whether the job has successfully run.

    **Return type**

    `bool`
  </Function>

  ### in\_final\_state

  <Function id="qiskit.providers.basicaer.BasicAerJob.in_final_state" name="in_final_state" signature="in_final_state()">
    Return whether the job is in a final job state such as `DONE` or `ERROR`.

    **Return type**

    `bool`
  </Function>

  ### job\_id

  <Function id="qiskit.providers.basicaer.BasicAerJob.job_id" name="job_id" signature="job_id()">
    Return a unique id identifying the job.

    **Return type**

    `str`
  </Function>

  ### result

  <Function id="qiskit.providers.basicaer.BasicAerJob.result" name="result" signature="result(timeout=None)">
    Get job result .

    **Returns**

    Result object

    **Return type**

    qiskit.Result
  </Function>

  ### running

  <Function id="qiskit.providers.basicaer.BasicAerJob.running" name="running" signature="running()">
    Return whether the job is actively running.

    **Return type**

    `bool`
  </Function>

  ### status

  <Function id="qiskit.providers.basicaer.BasicAerJob.status" name="status" signature="status()">
    Gets the status of the job by querying the Python’s future

    **Returns**

    The current JobStatus

    **Return type**

    [qiskit.providers.JobStatus](qiskit.providers.JobStatus "qiskit.providers.JobStatus")
  </Function>

  ### submit

  <Function id="qiskit.providers.basicaer.BasicAerJob.submit" name="submit" signature="submit()">
    Submit the job to the backend for execution.

    **Raises**

    [**JobError**](qiskit.providers.JobError "qiskit.providers.JobError") – if trying to re-submit the job.
  </Function>

  ### wait\_for\_final\_state

  <Function id="qiskit.providers.basicaer.BasicAerJob.wait_for_final_state" name="wait_for_final_state" signature="wait_for_final_state(timeout=None, wait=5, callback=None)">
    Poll the job status until it progresses to a final state such as `DONE` or `ERROR`.

    **Parameters**

    *   **timeout** (`Optional`\[`float`]) – Seconds to wait for the job. If `None`, wait indefinitely.

    *   **wait** (`float`) – Seconds between queries.

    *   **callback** (`Optional`\[`Callable`]) –

        Callback function invoked after each query. The following positional arguments are provided to the callback function:

        *   job\_id: Job ID
        *   job\_status: Status of the job from the last query
        *   job: This BaseJob instance

        Note: different subclass might provide different arguments to the callback function.

    **Raises**

    [**JobTimeoutError**](qiskit.providers.JobTimeoutError "qiskit.providers.JobTimeoutError") – If the job does not reach a final state before the specified timeout.

    **Return type**

    `None`
  </Function>
</Class>

